# midscore_io_w2

./: .gitignore  .gitmodules  .rubocop.yml  .ruby-version  .tags  Gemfile  README.txt  _.miaedscore.online_private_key.key_BACKUP  accurate_moon_phase.rb  artywalf_redir.txt  backup_db.rb  bashasset_eng-_redir.txt  bashasset_eng-redir.txt  bestinky.txt  calendar.rb  cgmfs.rb  config.ru  db_console.rb  db_init.rb  db_init_tests.rb  gem-update.sh  generate_ethernet_certs.txt  hitches.txt  hudl.ink image service.sxcu  instALL.rb  install_build_tools.sh  install_powershell.sh  install_rbenv_ruby_yjit_jemalloc.sh  install_rbenv_ruby_yjit_jemalloc_local.sh  ip.txt  key.pem  kill_process_by_name  kill_puma_server.sh  kill_server.rb  local.cert+2-key.pem  local.cert+2.pem  localhost.crt  localhost.key  logger.rb  main_chat_log.txt  (+49 more)
.bundle/: config
.history/: midscore_web_20240511033054.code-workspace  midscore_web_20240511055458.code-workspace  midscore_web_20240511055554.code-workspace  restart_server_20240511033053.rb
.history/config/: puma-local_20240511035737.rb  puma-local_20240511060125.rb  puma-local_20240511060132.rb  puma-local_20240511060145.rb  puma-local_20240511060409.rb
.yardoc/: checksums  object_types
assets/css/: prism.css  style.css
assets/js/: prism.js
cgmfs/: sl_add_api.rb
cgmfs/routes/: VAR_DB.rb  admin.rb  aritywolfnet.rb  artywalfnet.rb  bashasset_eng.rb  blog.rb  card.rb  gallery.rb  midscore.code-profile  midscoreart.rb  midscoreio.rb  moon.rb  r.rb  root.rb  simulatorwolfnet.rb  sun.rb  thefieldtesters.rb  upload_image_dumper.rb  userlist.rb
cgmfs/routes/api/: api.rb  file.rb  screens.rb  text.rb
cgmfs/routes/backup/: backup.rb
cgmfs/routes/pages/: page.rb
cgmfs/routes/sl/: log.rb  sl.rb
cgmfs/routes/u/: u.rb
cgmfs/routes/uploads/: list.rb  uploads.rb
cgmfs/routes/users/: users.rb
config/: local.cert.key.pem  miaedscore.online.p12  miaedscore.online_ssl_certificate.cer  mywebsite.csr  mywebsite.key  pshell-msys.rb  puma-local.rb  puma-localserver.rb  puma-nginx-development.rb  puma-nginx-mid.rb  puma-nginx-midscore-io-digitalocean.rb  puma-nginx-production-hud.rb  puma-nginx-production-local.rb  puma-nginx-production-workers.rb  puma-nginx-production.rb  puma-nginx.rb  puma.pid  puma.rb  puma.state  puma_stimky.rb  server.crt  server.csr  server.key  www.stimky.info_private_key.key  www.stimky.info_ssl_certificate.cer
discord_engine/: init.rb  main.rb
doc/: AOH.html  FileContextManagedPartitionedArray.html  FileContextManagedPartitionedArrayManager.html  FileMethods.html  JSONeval.html  LineDB.html  MPMDBServer.html  ManagedPartitionedArray.html  Node.html  PartitionedArray.html  PartitionedArrayDatabase.html  RedBlackTree.html  TelegramChat.html  TelegramLogger.html  _index.html  class_list.html  file.README.html  frames.html  index.html  method_list.html  top-level-namespace.html
image_resizer/: Cargo.toml
image_resizer/src/: compile.sh  compile_rb_list.rblist  main copy.rs  main.rs  main.rustby  require_linedb.rb
installation_guides/: Ruby-YJIT-FAST.txt
lib/: bst_array_make.rb  proxy_middleware.rb  sun_moon_phases.rb
lib/dir_requires/: std_numerology.rb
lib/loggers/: README.md  telegram_chat_openai.rb  telegram_logger.rb  telegram_logger_omp.rb  telegram_slash_openai_bot_PCAI.rb  test.json
linguistic_engine/: main.rb
mpa_db_server/: Gemfile  bundle_exec.rb  config.ru  logger.rb  mpa_db_init.rb  mpa_db_server.rb  require_dir.rb
mpa_db_server/config/: puma-mpa-db-local.rb
mpa_db_server/partitioned_array/: managed_partitioned_array.rb  partitioned_array.rb
mpa_db_server/requires/: mpa_db_server_require_all.rb
mpa_db_server/routes/: root.rb
openssl-1.1.1w/: Makefile  configdata.pm  libcrypto.pc  libcrypto.so.1.1  libssl.pc  openssl.pc  pod2htmd.tmp
openssl-1.1.1w/apps/: openssl
openssl-1.1.1w/crypto/: buildinf.h
openssl-1.1.1w/test/: asn1_internal_test  chacha_internal_test  cmactest  ctype_internal_test  curve448_internal_test  drbgtest  ec_internal_test  modes_internal_test  poly1305_internal_test  rdrand_sanitytest  siphash_internal_test  sm2_internal_test  sm4_internal_test  x509_internal_test
openssl-1.1.1w/tools/: c_rehash
rustby/cli-interface-rustby_vm/: Cargo.toml
rustby/rustby-vm/: Cargo.toml
rustby/rustby-vm-interface/: Cargo.toml
rustby/rustby-vm/src/: main.rs
sl_relay/: Cargo.toml
sl_relay/src/: compile.bat  compile_rb_list.rblist  compile_rb_require_list.rblist  main.rs  main.rustby
sl_relay/src/rb_src/: parse_move_file.rb
tiade-maeepers-saerver-all/: Cargo.toml
tiade-maeepers-saerver-all/src/: Cargo.toml  build-dist.bat  build-dist.ps1  build-dist.rb  build.rs  build_dist_bashasset_prim.bat  build_timestamp.txt  bytecode  compile.bat  compile.rb  crc-rustby-vm.rb  dist-exe.ps1  epoch_time_parse.rb  json.rb  krita-download-updates.rb  lagrange.rs  main.rb  main.rs  main_ruby-vm.rs  md5  moon.rb  move-exe.ps1  run.bat  run.rb  uuid
tiade-maeepers-saerver-all/src/THE-META_GAME-Magi-Tek_Tek-Magi-Engiane/: compile_rb_list.rblist  hammerspace-uploader.rb  main.rustby  requires.rb  rustbyc.rb  rustbytec.rb
tiade-maeepers-saerver-all/src/assets/js/: prism.js
tiade-maeepers-saerver-all/src/css/: style2.css
unlimited_asset_uploader_php/: new_asset.html  new_asset.php
views/: artywalf_redirect.html.erb  layout.html.erb  layout_min_old.html.erb  list_urls.html.erb  midscore_landing.html.erb  page_views.txt  page_views_local.txt  sl_api_list.html.erb  sl_data.html.erb
views/blog/: blog.html.erb  delete.html.erb  edit.html.erb  edit2.html.erb  edit_html.html.erb  edit_markdown.html.erb  login.html.erb  new.html.erb  new_html.html.erb  new_markdown.html.erb  new_wysiwyg.html.erb  pin.html.erb  signup.html.erb  tag.html.erb  view.html.erb  view_all.html.erb
views/blog/gallery/: edit_user_gallery_image_id.html.erb  edit_uwu_collections_id.html.erb  list_gallery_uploads.html.erb  list_gallery_users.html.erb  new.html.erb  new_url.html.erb  new_uwu_collections.html.erb  (+7 more)
views/linedb/: admin.html.erb
views/r/: view.html.erb
(+2 files in other folders)
