[package]
name = "tiade-maeepers-saerver-all"
version = "0.1.0"
edition = "2024"

[dependencies]
async-native-tls = "0.5.0"
async-std = { version = "1.13.1", features = ["async-attributes", "async-process", "attributes", "futures-core", "io_safety", "unstable"] }
chrono = { version = "0.4.40", features = ["pure-rust-locales", "rkyv-64", "rkyv-validation", "serde"] }
magnus = { version = "0.7.1", features = ["bytes", "embed"] }
native-tls = "0.2.14"
oneshot = { version = "0.1.11", features = ["loom"] }
serde = "1.0.219"
surf = { version = "2.3.2", default-features = true }

tide = { version = "0.16.0", features = ["docs", "unstable"] }
tide-rustls = "0.3.0"
tokio =  { version = "1.44.1", features = ["full"] }
tokio-native-tls = "0.3.1"
url = { version = "2.5.4", features = ["serde"] }
