cargo-features = ["edition2024"]
[package]
name = "THE-META_GAME-Magi-Tek_Tek-Magi-Engiane"
version = "0.1.5"
edition = "2024"
build = "build.rs"


[dependencies]
macroquad = { version = "0.4.13", features = [
    "audio",
    "backtrace",
    "glam-serde",
    "log",
    "log-rs",
    "quad-snd",
] }
magnus = { version = "0.7.1", features = ["embed"] }
base64 = "0.22.1"
bincode = { version = "1.3.3", features = ["i128"] }
load_file = "1.0.1"
num-bigfloat = "1.7.1"
num-bigint = { version = "0.4.6", features = [
    "arbitrary",
    "quickcheck",
    "rand",
    "serde",
] }
rb-sys = { version = "0.9.109", features = ["ruby-macros", "link-ruby"] }
reqwest = "0.12.5"
rust-analyzer = "0.0.1"
serde = { version = "1.0.215", features = [
    "alloc",
    "derive",
    "rc",
    "serde_derive",
    "unstable",
] }
serde_json = { version = "1.0.132", features = [
    "alloc",
    "arbitrary_precision",
    "float_roundtrip",
    "indexmap",
    "preserve_order",
    "raw_value",
    "unbounded_depth",
] }
zip = { version = "2.2.2", features = ["_all-features"] }
uuid = { version = "1.13.1", features = [
    "arbitrary",
    "atomic",
    "borsh",
    "bytemuck",
    "fast-rng",
    "js",
    "macro-diagnostics",
    "md5",
    "rng-getrandom",
    "rng-rand",
    "serde",
    "sha1",
    "slog",
    "uuid-rng-internal-lib",
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
    "zerocopy",
] }
cargo-edit = "0.13.1"
tide = { version = "0.16.0", features = ["docs", "unstable"] }
md-5 = "0.10.6"
chrono = { version = "0.4.40", features = [
    "arbitrary",
    "pure-rust-locales",
    "rkyv-64",
    "rkyv-validation",
    "serde",
    "unstable-locales",
    "libc",
] }


[dependencies.image]
version = "0.23.14"
default-features = false
features = ["png", "jpeg", "tiff", "gif", "webp"]

[profile.dev]
opt-level = 3

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.x86_64-pc-windows-gnu]
linker = "gcc"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
]
